gccida/c0/regclass_compatible_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regclass_compatible_p/src/regmove.c:557:29: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
if ( !reg_class_subset_p( ( reg_class)class0, ( reg_class)class1) 
                            ^~~~~~~~~
                            regclass
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regclass_compatible_p/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regclass_compatible_p/src/regmove.c:557:39: error: expected ')'
if ( !reg_class_subset_p( ( reg_class)class0, ( reg_class)class1) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regclass_compatible_p/src/regmove.c:557:25: note: to match this '('
if ( !reg_class_subset_p( ( reg_class)class0, ( reg_class)class1) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regclass_compatible_p/src/regmove.c:567:28: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
if ( reg_class_subset_p( ( reg_class)class1, ( reg_class)class0) ) 
                           ^~~~~~~~~
                           regclass
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regclass_compatible_p/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regclass_compatible_p/src/regmove.c:567:38: error: expected ')'
if ( reg_class_subset_p( ( reg_class)class1, ( reg_class)class0) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regclass_compatible_p/src/regmove.c:567:24: note: to match this '('
if ( reg_class_subset_p( ( reg_class)class1, ( reg_class)class0) ) 
                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regclass_compatible_p/src/obj/regmove.o] Error 1
